added support for ingestion_queue